fix loader on mobile view.

--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -151,6 +151,15 @@ $xs: 470px;
   position: fixed;
   bottom: 30px;
   right: 40px;
+  z-index: 99;
+  @media (max-width: $md) {
+    bottom: 10px;
+    right: 10px;
+    svg {
+      font-size: 12px !important;
+      max-width: 20px !important;
+    }
+  }
   svg {
     color: #381a3f;
     opacity: 0.7;
